# DominionLeague

./: .gitignore  Cargo.toml  README.md  run_local_tests.sh
.github/workflows/: rust_build_and_test  rust_build_and_test.yml
dominion_league/: Cargo.toml
dominion_league/src/: main.rs
dominion_league/src/endpoints/: health.rs
dominion_league/src/model/: set.rs  set_data_loader.rs
src/: main.rs  scraper_main.rs
src/endpoints/: card_art.rs  card_art_from_id.rs  card_json_from_id.rs  card_json_from_name.rs  health.rs  mod.rs
src/model/: card.rs  card_tag.rs  card_type.rs  kingdom.rs  mod.rs  set.rs  set_data_loader.rs
src/model/data_loaders/: card_data_loader.rs  mod.rs  set_data_loader.rs
src/model/raw_data/: basic_cards.json  dominion_cards.json  sets.json
src/model/scrapers/: mod.rs  scrape_card_files.rs  scrape_set_files.rs  scraper_helpers.rs
src/model/state/: card_data.rs  mod.rs
