[package]
name = "dominion_league"
version = "0.1.0"
edition = "2021"
authors = ["MarkBrockettRobson"]
default-run = "website"

[[bin]]
name = "website"
path = "src/main.rs"

[[bin]]
name = "scrapers"
path = "src/scraper_main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.20.1", features = ["full"] }
reqwest = "0.11.11"
regex = "1"
rocket = { version = "0.5.0-rc.2", features = ["json"] }
mutants = "0.0.3"

[dev-dependencies]
file_diff = "1.0.0"
test-case = "2.1.0"
proptest = "1.0.0"
cargo-llvm-cov = "0.4.8"
mockall = "0.11.1"
