[package]
name = "dominion_league"
version = "0.1.0"
edition = "2021"
authors = ["MarkBrockettRobson"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json"] }
mutants = "0.0.3"

[dev-dependencies]
test-case = "2.1.0"
proptest = "1.0.0"
cargo-llvm-cov = "0.4.8"
mockall = "0.11.1"
